Ajouter hathor_backup.png

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
         <div class="projets-grid">
             <div class="projet">
                 <h3>Projet 1</h3>
-                <img src="assets/hathor.png" alt="Projet 1">
+                <img src="assets/hathor_backup.png" alt="Projet 1">
                 <p>AP1 Création d'une entrprise fictive</p>
             </div>
             <div class="projet">
