--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="img">
-                <img src="nemo-removebg-preview.png" alt="no">
+                <img src="Remove-bg.ai_1727355912630.png" alt="no">
             </div>
 
         </div>
@@ -348,7 +348,7 @@
         </article>
     </section>
 
-    <!-- <section class="epreuve" id="epreuve">
+    <section class="epreuve" id="epreuve">
         <div class="def">
             <h2>Qu'est ce que l'épreuveE4 ?</h2>
             <p>Le principe de cette épreuve est de présenter des réalisation professionnelles que nous avons put
@@ -358,7 +358,7 @@
         <div class="ep">
             <img src="assets/BTS SIO- Tableau de synthese - Epreuve E4 (1) (1)-1.png" alt="">
         </div>
-    </section> -->
+    </section>
 
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
