--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
                 <a href="assets/CV.pdf" class="btn2" target="_blank">Voir CV</a>
             </div>
 
-            <div class="img">
+            <!-- <div class="img">
                 <img src="Remove-bg.ai_1727355912630.png" alt="no">
-            </div>
+            </div> -->
 
         </div>
     </section>
