correction de la source

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="projets-grid">
             <div class="projet">
                 <h3>Entreprice fictive</h3>
-                <img src="/assets/Hathor.png" alt="Projet 1">
+                <img src="assets/Hathor.png" alt="Projet 1">
 
             </div>
             <div class="projet">
@@ -250,7 +250,7 @@
             </div> -->
             <div class="projet">
                 <h3>GLPI</h3>
-                <img src="/assets/GLPI.png" alt="Projet 4">
+                <img src="assets/GLPI.png" alt="Projet 4">
 
             </div>
 
