--- a/index.html
+++ b/index.html
@@ -235,12 +235,12 @@
         <div class="projets-grid">
             <div class="projet">
                 <h3>Entreprice fictive</h3>
-                <img src="assets/Hathor.png" alt="Projet 1">
+                <img src="./assets/Hathor.png" alt="Projet 1">
 
             </div>
             <div class="projet">
                 <h3>Conception M2L</h3>
-                <img src="assets/M2L.png" alt="Projet 2">
+                <img src="./assets/M2L.png" alt="Projet 2">
             </div>
             <!-- 
             <div class="projet">
@@ -250,7 +250,7 @@
             </div> -->
             <div class="projet">
                 <h3>GLPI</h3>
-                <img src="assets/GLPI.png" alt="Projet 4">
+                <img src="./assets/GLPI.png" alt="Projet 4">
 
             </div>
 
@@ -281,7 +281,7 @@
             <div class="veilles-flex">
                 <div class="veille">
                     <h3>RayNeo</h3>
-                    <img src="/assets/veille-1.png" alt="RayNeo">
+                    <img src="./assets/veille-1.png" alt="RayNeo">
                 </div>
                 <!-- <div class="veille">
                     <h3>Veille 2</h3>
