--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         <div class="projets-grid">
             <div class="projet">
                 <h3>Entreprice fictive</h3>
-                <img src="assets/Hathor.png" alt="Projet 1">
+                <img src="assets/fic.png" alt="Projet 1">
 
             </div>
             <div class="projet">
