--- a/document.html
+++ b/document.html
@@ -37,46 +37,51 @@
                 </header>
 
                 <main id="contenu-principal">
+                                <section id="documents">
+                                                <header>
 
+                                                </header>
+                                                <div class="main-content">
+                                                                <ul class="liste-documents">
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="GLPI"
+                                                                                                                onclick="window.open('assets/GLPI.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Entreprise Fictive"
+                                                                                                                onclick="window.open('assets/AP1.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Veille - RayNeo X2"
+                                                                                                                onclick="window.open('assets/RAYNEO X2.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Conception M2L"
+                                                                                                                onclick="window.open('assets/AP2.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Rapport de Stage"
+                                                                                                                onclick="window.open('assets/Rapport de stage.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Inventaire Matériel Réseaux"
+                                                                                                                onclick="window.open('assets/inventaire.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Épreuve E4"
+                                                                                                                onclick="window.open('assets/Tableau de synthèse.pdf', '_blank')" />
+                                                                                </li>
+                                                                </ul>
 
-                                <div class="main-content">
-                                                <ul class="liste-documents">
-                                                                <li><a href="assets/GLPI.pdf" target="_blank">
-                                                                                                GLPI </a>
-                                                                </li>
-                                                                <li><a href="assets/AP1.pdf" target="_blank">
-                                                                                                Entreprise
-                                                                                                Fictive</a>
-                                                                </li>
-                                                                <li><a href="assets/RAYNEO X2.pdf"
-                                                                                                target="_blank">Veille
-
-                                                                                                - RayNeo
-                                                                                                X2</a>
-                                                                </li>
-                                                                <li><a href="assets/AP2.pdf" target="_blank">Conception
-
-                                                                                                M2L</a>
-                                                                </li>
-                                                                <li><a href="assets/Rapport_Stage.pdf"
-                                                                                                target="_blank">Rapport
-                                                                                                de
-                                                                                                Stage</a>
-                                                                </li>
-                                                                <li><a href="assets/Lettre_Motivation.pdf"
-                                                                                                target="_blank">Inventaire
-                                                                                                Matériel
-                                                                                                Réseaux</a>
-                                                                </li>
-                                                                <li><a href="assets/Tableau de synthèse.pdf"
-                                                                                                target="_blank">
-                                                                                                Épreuve
-                                                                                                E4</a>
-                                                                </li>
-                                                </ul>
-                                </div>
-
-
+                                                </div>
+                                </section>
                 </main>
 
                 <footer class="footer">
