--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </div>
             <div class="projet">
                 <h3>Rapport de stage</h3>
-                <img src="assets/Stage.png" alt="Projet 6">
+                <img src="assets/stage.png" alt="Projet 6">
 
             </div>
         </div>
