--- a/document.html
+++ b/document.html
@@ -51,12 +51,17 @@
                                                                                 <li>
                                                                                                 <input type="button"
                                                                                                                 value="Entreprise Fictive"
-                                                                                                                onclick="window.open('assets/AP1.pdf', '_blank')" />
+                                                                                                                onclick="window.open('assets/AP1.pdf ', '_blank')" />
                                                                                 </li>
                                                                                 <li>
                                                                                                 <input type="button"
                                                                                                                 value="Veille - RayNeo X2"
                                                                                                                 onclick="window.open('assets/RAYNEO X2.pdf', '_blank')" />
+                                                                                </li>
+                                                                                <li>
+                                                                                                <input type="button"
+                                                                                                                value="Veille - Deepseck"
+                                                                                                                onclick="window.open('assets/Deepseck.pdf', '_blank')" />
                                                                                 </li>
                                                                                 <li>
                                                                                                 <input type="button"
