--- a/index.html
+++ b/index.html
@@ -285,13 +285,16 @@
                     <h3>RayNeo</h3>
                     <img src="./assets/veille-1.png" alt="RayNeo">
                 </div>
-                <!-- <div class="veille">
-                    <h3>Veille 2</h3>
-                </div> -->
+                <div class="veille">
+                    <h3>Deepseck</h3>
+                    <img src="./assets/deepseeck.png" alt="Deepseck">
+                </div>
             </div>
+
 
             <h3>-SUJET DE LA VEILLE TECHNOLOGIQUE</h3>
             <p>Les Avancées Technologiques dans les Lunettes Intelligentes AR</p>
+            <p>Les Nouveaux Enjeux de l'IA Générative avec DeepSeek</p>
 
             <h3>-QUELS SONT LES MOYENS QUE J'UTILISE POUR RÉALISER MA VEILLE ?</h3>
             <p>Feedly, un agrégateur de flux RSS.</p>
