--- a/index.html
+++ b/index.html
@@ -119,15 +119,15 @@
                         <div class="timeline-competence">Front-end</div>
                         <div class="timeline-content">
                             <div class="skill">
-                                <img src="/assets/html.png" alt="HTML" class="skill-logo">
+                                <img src="assets/html.png" alt="HTML" class="skill-logo">
 
                             </div>
                             <div class="skill">
-                                <img src="/assets/css.png" alt="CSS" class="skill-logo">
+                                <img src="assets/css.png" alt="CSS" class="skill-logo">
 
                             </div>
                             <div class="skill">
-                                <img src="/assets/js.png" alt="JavaScript" class="skill-logo">
+                                <img src="assets/js.png" alt="JavaScript" class="skill-logo">
 
                             </div>
                         </div>
@@ -139,11 +139,11 @@
                         <div class="timeline-competence">Back-end</div>
                         <div class="timeline-content">
                             <div class="skill">
-                                <img src="/assets/pnp.png" alt="PHP" class="skill-logo">
+                                <img src="assets/pnp.png" alt="PHP" class="skill-logo">
 
                             </div>
                             <div class="skill">
-                                <img src="/assets/nodejs.png" alt="Node.js" class="skill-logo">
+                                <img src="assets/nodejs.png" alt="Node.js" class="skill-logo">
 
                             </div>
                         </div>
@@ -155,7 +155,7 @@
                         <div class="timeline-competence">Base de données</div>
                         <div class="timeline-content">
                             <div class="skill">
-                                <img src="/assets/mysql.png" alt="MySQL" class="skill-logo">
+                                <img src="assets/mysql.png" alt="MySQL" class="skill-logo">
 
                             </div>
                         </div>
@@ -167,11 +167,11 @@
                         <div class="timeline-competence">Outils de développement</div>
                         <div class="timeline-content">
                             <div class="skill">
-                                <img src="/assets/vscode.png" alt="VS Code" class="skill-logo">
+                                <img src="assets/vscode.png" alt="VS Code" class="skill-logo">
 
                             </div>
                             <div class="skill">
-                                <img src="/assets/github.png" alt="GitHub" class="skill-logo">
+                                <img src="assets/github.png" alt="GitHub" class="skill-logo">
 
                             </div>
                         </div>
@@ -183,7 +183,7 @@
                         <div class="timeline-competence">Framework</div>
                         <div class="timeline-content">
                             <div class="skill">
-                                <img src="/assets/react.png" alt="React" class="skill-logo">
+                                <img src="assets/react.png" alt="React" class="skill-logo">
 
                             </div>
                         </div>
