--- a/index.html
+++ b/index.html
@@ -12,14 +12,35 @@
 </head>
 
 <body>
+
+    <div class="ocean-light"></div>
+    <div class="wave"></div>
+    <div class="bubble-container">
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+        <span class="bubble"></span>
+    </div>
+    <div class="particles">
+        <span class="particle"></span>
+        <span class="particle"></span>
+        <span class="particle"></span>
+        <span class="particle"></span>
+    </div>
     <header>
         <div class="header">
             <nav>
                 <ul>
                     <h1 class="logo">Helsy Soglo</h1>
                     <li><a href="#home" class="active">Accueil</a></li>
-                    <li><a href="#about">À propos</a></li>
-                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#about">Compétences</a></li>
+                    <li><a href="#projects">Projets</a></li>
                     <li><a href="#veilles">Veilles</a></li>
                     <li><a href="./document.html">Docs</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -77,7 +98,6 @@
                     <ul>
                         <li>Administrateur systèmes et réseaux</li>
                         <li>Informaticien support et déploiement</li>
-                        <li>Pilote d'exploitation</li>
                         <li>Support systèmes et réseaux</li>
                         <li>Technicien d'infrastructure</li>
                         <li>Technicien de production</li>
@@ -99,7 +119,6 @@
                         <li>Développeur informatique</li>
                         <li>Analyste d'applications ou d'études</li>
                         <li>Analyste programmeur</li>
-                        <li>Programmeur analyste</li>
                         <li>Programmeur d'applications</li>
                         <li>Responsable des services applicatifs</li>
                         <li>Technicien d'études informatiques</li>
